--- a/src/app/v2/components/extras/extras.component.html
+++ b/src/app/v2/components/extras/extras.component.html
@@ -529,10 +529,10 @@
   <!-- Contenido del CTA -->
   <app-navbar background="transparent" zindex="true"></app-navbar>
   <div class="relative h-full flex flex-col justify-center items-center text-center px-4">
-    <div class="bg-black bg-opacity-50 p-8 rounded-lg max-w-2xl mx-auto">
+    <div class="bg-[#0c243c] bg-opacity-80 p-8  max-w-2xl mx-auto">
       <h2 class="text-4xl font-bold text-white mb-4">Explora la Industria 4.0</h2>
       <p class="text-gray-200 mb-6 text-lg">Accede a recursos exclusivos y conoce las últimas innovaciones.</p>
-      <a href="/buscador" routerLink="/buscador" class="bg-yellow-500 text-gray-900 shadow-lg px-8 py-3 rounded-lg hover:bg-yellow-600 transition duration-300 inline-block">Explorar Recursos</a>
+      <a href="/buscador" routerLink="/buscador" class="bg-[#fbcc2c] text-gray-900 shadow-lg px-8 py-3  hover:bg-yellow-600 transition duration-300 inline-block">Explorar Recursos</a>
     </div>
   </div>
 </div>
