--- a/src/app/v2/modules/proyecto-equipo/proyecto-equipo.component.html
+++ b/src/app/v2/modules/proyecto-equipo/proyecto-equipo.component.html
@@ -6,7 +6,8 @@
 <main class="container mx-auto py-16 flex flex-col lg:flex-row">
   <!-- Sección de búsqueda y resultados -->
   <div class="w-full lg:w-3/4 pr-8 p-8">
-    <h1 class="text-4xl font-extrabold mb-8 text-gray-800">Conoce a Nuestro Equipo</h1>
+    <h1 class="text-4xl font-bold mb-12 border-b-2 border-amber-500 pb-4">Conoce a nuestro equipo</h1>
+
     <!-- Espacio para contenido dinámico -->
     <section id="our-team">
       <div class="container mx-auto px-4">
